paljon tietokantaan liittyviä muutoksia ja listojen päivitystä ynnämuuta

--- a/MOVA2020/Properties/Resources.resx
+++ b/MOVA2020/Properties/Resources.resx
@@ -119,9 +119,12 @@
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="alustus" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\alustus.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+    <value>..\sql\alustus.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
   <data name="postinumerot" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\postinumerot.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+    <value>..\sql\postinumerot.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="testidata" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\sql\testidata.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
 </root>
